# vertex-rag-flask

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/app/: __init__.py
src/app/routes/: api.py  main.py
src/app/services/: document_service.py  vertex_service.py
src/app/templates/: base.html  chat.html  index.html  upload.html
src/app/utils/: helpers.py
src/config/: config.py
src/config/utils/: gcp.py
tests/: test_app.py
